# colonization

./: .gitignore  .travis.yml  ASBindGenConfiguration.lua.cmake  CMakeLists.txt  PrintUnwrapperLogs.sh  README.md
angel-script-project/: angel-script-project.cbp
assets/: assets.blend
assets/XCFs/: BasicLevelHeighmap.xcf  BasicLevelMapTextureAndSketch.xcf  ButtonBackground.xcf  WindowBackground.xcf
code-generation/: GenerateGameConfiguration.lua
code-generation/AngelScriptBindingsGenerator/: Configuration.lua  Core.lua  Data.lua  Main.lua  PrintConfiguration.lua  ReadFile.lua
code-generation/AngelScriptBindingsGenerator/Bindables/: Class.lua  Constant.lua  Enum.lua  ExternalClass.lua  Function.lua  Urho3DSubsystem.lua
code-generation/AngelScriptBindingsGenerator/BindingTypes/: Class.lua  Constant.lua  Enum.lua  Function.lua  Urho3DSubsystem.lua
code-generation/AngelScriptBindingsGenerator/Core/: ConfigurationUtils.lua  Core.lua  Data.lua  DataUtils.lua  FileUtils.lua  ReadFile.lua  TypeUtils.lua
code-generation/AngelScriptBindingsGenerator/Templates/: BindingsTemplate.cpp  Templates.lua  TemplatesUtils.lua
code-generation/AngelScriptBindingsGenerator/TestProject/: Object1.hpp
code-generation/AngelScriptBindingsGenerator/Tokenization/: TokenToString.lua  TokenUtils.lua  TokenizeFile.lua  TokensList.lua
code-generation/AngelScriptBindingsGenerator/Writer/: WriteFile.lua  WriteMainCPP.lua  WriteMainCpp.lua  WriteMainHPP.lua  WriteMainHpp.lua
code-generation/GenerateDataObjectFromScaffold/: Globals.lua  Main.lua  ProcessBindings.lua  ProcessConfiguration.lua  ProcessHeader.lua  ProcessObject.lua  ProcessVars.lua  Utils.lua
sources/: CMakeLists.txt
sources/AngelScriptAPIHeaderGenerator/: CMakeLists.txt  Generator.cpp  Generator.hpp
sources/CheckScripts/: CMakeLists.txt  CheckScripts.cpp  CheckScripts.hpp  Defines.hpp  Defines.hpp.cmake
sources/Colonization/: ASBindGenExternalClasses.hpp  Bindings.cpp.template  Bindings.hpp.template  BuildConfiguration.hpp  BuildConfiguration.hpp.cmake  CMakeLists.txt
sources/Colonization/Activities/: HostActivity.cpp  HostActivity.hpp  IngameClientActivity.cpp  IngameClientActivity.hpp  IngamePlayerActivity.cpp  IngamePlayerActivity.hpp  MainMenuActivity.cpp  MainMenuActivity.hpp
sources/Colonization/AngelScriptBinders/: BindActivitiesApplication.cpp  BindActivitiesApplication.hpp  BindActivity.cpp  BindActivity.hpp  BindAngelScriptDirectMemoryAccess.cpp  BindAngelScriptDirectMemoryAccess.hpp  BindDistrict.cpp  BindFogOfWarCalculator.cpp  BindGameConfiguration.cpp  BindGameConfiguration.hpp  BindGameStateType.cpp  BindGameStateType.hpp  BindHostActivity.cpp  BindHostActivity.hpp  BindIngameClientActivity.cpp  BindIngamePlayerActivity.cpp  BindIngamePlayerActivity.hpp  BindInternalTradeArea.cpp  BindMainMenuActivity.cpp  BindMainMenuActivity.hpp  BindMap.cpp  BindMap.hpp  BindMapMaskUpdater.cpp  BindMapMaskUpdater.hpp  BindNetworkMessageType.cpp  BindNetworkMessageType.hpp  BindPlayerActionType.cpp  BindPlayerActionType.hpp  BindPlayerInfo.cpp  BindUnit.cpp  BindUnit.hpp  BindUnits.cpp  BindUnits.hpp  BindUnitsContainer.cpp  BindUnitsContainer.hpp  BindingMacroses.hpp  BindingMacroses.hpp.KR3740
sources/Colonization/Backend/: BattlesProcessor.cpp  BattlesProcessor.hpp  ColoniesActionsProcessor.cpp  ColoniesActionsProcessor.hpp  ColoniesEvolutionManager.cpp  ColoniesEvolutionManager.hpp  ColoniesManager.cpp  ColoniesManager.hpp  ColoniesProcessor.cpp  ColoniesProcessor.hpp  GameStateManager.cpp  GameStateManager.hpp  MessagesHandler.cpp  Player.cpp  (+15 more)
sources/ColonizationLauncher/: CMakeLists.txt  ColonizationLauncher.cpp  ColonizationLauncher.hpp
sources/EditorLauncher/: CMakeLists.txt  EditorLauncher.cpp  EditorLauncher.hpp
sources/GenerateAngelScriptBindings/: CMakeLists.txt  Defines.hpp  GenerateAngelScriptBindings.cpp  GenerateAngelScriptBindings.hpp
sources/GenerateBindingsHeader/: CMakeLists.txt  Defines.hpp  Defines.hpp.cmake  Generator.cpp
sources/Launcher/: Application.cpp  Application.hpp  CMakeLists.txt  LauncherApplication.cpp  LauncherApplication.hpp
sources/Launcher/AngelScriptBinders/: BindApplication.cpp  BindApplication.hpp  BindLauncherApplication.cpp  BindLauncherApplication.hpp
sources/Tests/: CMakeLists.txt  EmptyInternalPlayer.hpp  TestBasicColonyBalance.cpp  TestBasicColonyBalance.hpp  TestBattleCreationAndJoining.cpp  TestBattleCreationAndJoining.hpp  TestBattleProcessingAndLooting.cpp  TestBattleProcessingAndLooting.hpp  TestColonyActionBuildWarShip.cpp  TestColonyActionBuildWarShip.hpp  TestColonyActionFormArmy.cpp  TestColonyActionFormArmy.hpp  TestDiplomacyWarAndPeace.cpp  TestDiplomacyWarAndPeace.hpp  TestDistrictsNeighborsCalculation.cpp  TestDistrictsNeighborsCalculation.hpp  TestFogOfWarCalculator.cpp  TestFogOfWarCalculator.hpp  TestInternalTradeArea.cpp  TestInternalTradeArea.hpp  TestInternalTradeProcessing.cpp  TestInternalTradeProcessing.hpp  TestMapMaskGeneration.cpp  TestMapMaskGeneration.hpp  TestMapPathFinding.cpp  TestMapPathFinding.hpp
sources/Tests/TestBasicColonyBalance/: CMakeLists.txt  TestApplication.cpp
sources/Tests/TestBattleCreationAndJoining/: CMakeLists.txt  TestApplication.cpp
sources/Tests/TestBattleProcessingAndLooting/: CMakeLists.txt  TestApplication.cpp  TestApplication.hpp
sources/Tests/TestColonyActionBuildWarShip/: CMakeLists.txt  TestApplication.cpp
sources/Tests/TestColonyActionFormArmy/: CMakeLists.txt  TestApplication.cpp
sources/Tests/TestDiplomacyWarAndPeace/: CMakeLists.txt  DiplomacyInternalPlayer.cpp  DiplomacyInternalPlayer.hpp  TestApplication.cpp
sources/Tests/TestDistrictsNeighborsCalculation/: CMakeLists.txt  TestApplication.cpp
sources/Tests/TestFogOfWarCalculator/: CMakeLists.txt  TestApplication.cpp
sources/Tests/TestInternalTradeProcessing/: CMakeLists.txt  TestApplication.cpp
sources/Tests/TestMapMaskGeneration/: CMakeLists.txt  TestApplication.cpp
sources/Tests/TestMapPathFinding/: CMakeLists.txt  TestApplication.cpp
sources/Tests/TestsUtils/: EmptyInternalPlayer.hpp
sources/Tools/: CMakeLists.txt
(+222 files in other folders)
