set (ANGELSCRIPT_API_HEADER_OUTPUT "\"${CMAKE_SOURCE_DIR}/angel-script-project/AngelScriptAPI.hpp\"")
configure_file (${CMAKE_CURRENT_SOURCE_DIR}/Defines.hpp.cmake ${CMAKE_CURRENT_SOURCE_DIR}/Defines.hpp)
set (TARGET_NAME AngelScriptAPIHeaderGenerator)
define_source_files ()
setup_executable ()
target_link_libraries (AngelScriptAPIHeaderGenerator Colonization)
add_test (NAME test_angelscript_bindings_generation COMMAND AngelScriptAPIHeaderGenerator)
