set (TARGET_NAME TestDistrictsNeighborsCalculation)
set (SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/TestDistrictsNeighborsCalculation.hpp ${CMAKE_CURRENT_SOURCE_DIR}/TestDistrictsNeighborsCalculation.cpp)
setup_executable ()
target_link_libraries (TestDistrictsNeighborsCalculation Colonization)
add_test (NAME test_districts_neighbors_calculation COMMAND TestDistrictsNeighborsCalculation)

set (TARGET_NAME TestMapPathFinding)
set (SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/TestMapPathFinding.hpp ${CMAKE_CURRENT_SOURCE_DIR}/TestMapPathFinding.cpp)
setup_executable ()
target_link_libraries (TestMapPathFinding Colonization)
add_test (NAME test_map_path_finding COMMAND TestMapPathFinding)

set (TARGET_NAME TestInternalTradeArea)
set (SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/TestInternalTradeArea.hpp ${CMAKE_CURRENT_SOURCE_DIR}/TestInternalTradeArea.cpp)
setup_executable ()
target_link_libraries (TestInternalTradeArea Colonization)
add_test (NAME test_internal_trade_area COMMAND TestInternalTradeArea)

set (TARGET_NAME TestInternalTradeProcessing)
set (SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/TestInternalTradeProcessing.hpp ${CMAKE_CURRENT_SOURCE_DIR}/TestInternalTradeProcessing.cpp)
setup_executable ()
target_link_libraries (TestInternalTradeProcessing Colonization)
add_test (NAME test_internal_trade_processing COMMAND TestInternalTradeProcessing)

set (TARGET_NAME TestFogOfWarCalculator)
set (SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/TestFogOfWarCalculator.hpp ${CMAKE_CURRENT_SOURCE_DIR}/TestFogOfWarCalculator.cpp)
setup_executable ()
target_link_libraries (TestFogOfWarCalculator Colonization)
add_test (NAME test_fog_of_war_calculator COMMAND TestFogOfWarCalculator)

set (TARGET_NAME TestMapMaskGeneration)
set (SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/TestMapMaskGeneration.hpp ${CMAKE_CURRENT_SOURCE_DIR}/TestMapMaskGeneration.cpp)
setup_executable ()
target_link_libraries (TestMapMaskGeneration Colonization)
add_test (NAME test_map_mask_generation COMMAND TestMapMaskGeneration)

