add_subdirectory (TestDistrictsNeighborsCalculation)
add_subdirectory (TestMapPathFinding)
add_subdirectory (TestBasicColonyBalance)
add_subdirectory (TestInternalTradeProcessing)
add_subdirectory (TestColonyActionBuildWarShip)
add_subdirectory (TestColonyActionFormArmy)
add_subdirectory (TestFogOfWarCalculator)
add_subdirectory (TestMapMaskGeneration)
add_subdirectory (TestDiplomacyWarAndPeace)
add_subdirectory (TestBattleCreationAndJoining)
add_subdirectory (TestBattleProcessingAndLooting)
add_subdirectory (TestsUtils)
